@@ -20,6 +20,7 @@ import com.swiftselect.payload.request.jobpostrequests.QualificationRequest;
 import com.swiftselect.payload.response.APIResponse;
 import com.swiftselect.payload.response.jobpostresponse.JobPostResponse;
 import com.swiftselect.payload.response.PostResponsePage;
+import com.swiftselect.payload.response.jobpostresponse.JobSearchResponse;
 import com.swiftselect.repositories.*;
 import com.swiftselect.services.JobPostService;
 import com.swiftselect.utils.HelperClass;
@@ -304,6 +305,15 @@ public class JobPostServiceImpl implements JobPostService {
         return ResponseEntity.ok(new APIResponse<>("Job posts retrieved by experience level successfully", jobPostResponses));
     }
 
+    public ResponseEntity<APIResponse<List<JobSearchResponse>>> searchJobs(String query) {
+        List<JobPost> jobPostSearch = jobPostRepository.searchJobs(query);
+
+        List<JobSearchResponse> searchResponses = jobPostSearch.stream()
+                .map(jobPost -> mapper.map(jobPost, JobSearchResponse.class))
+                .toList();
+        return ResponseEntity.ok(new APIResponse<>("search completed",searchResponses));
+    }
+
     @Override
     public ResponseEntity<APIResponse<List<JobPost>>> searchJobPost(String query, JobType jobType, Industry jobCategory) {
         List<JobPost> allJobPosts = jobPostRepository.searchJobs(query, jobType, jobCategory);
@@ -317,7 +327,7 @@ public class JobPostServiceImpl implements JobPostService {
                                 jobPost.getJobCategory().toString().toLowerCase().contains(queryLowerCase) ||
                                 jobPost.getEmployer().getCompanyName().toLowerCase().contains(queryLowerCase)
                 )
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(new APIResponse<>(suggestedJobPosts.toString()));
     }
